[project]
name = "swarmcol"
version = "0.1.0"
dependencies = [
    "typer[all]",
    "rich",
    "pyyaml",
    "docker",
    "fastapi",
    "pydantic"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "isort",
    "flake8",
    "pytest-cov"
]

[project.scripts]
aiswarm = "aiswarm.main:cli"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"